--- a/admin.html
+++ b/admin.html
@@ -21,10 +21,8 @@
 <body>
 
   <div class="center-content">
-
     <h1 class="casadeAmigos">Casa de Amigos</h1>
-
-   
+    <h2 class="zagolovok">Панель управління кімнатами</h2>
   </div>
 
   <div class="page-wrapper">
