--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </div>
 
 <div class="page-wrapper">
-    <img class="mozaika1left" src="./image/44577.svg" alt="mozaika1">
+    <img class="mozaika1left" src="./image/svg/mozaika11.svg" alt="mozaika1">
 </div>
 
 <script type="module" src="./password.js"></script>
