--- a/admin.html
+++ b/admin.html
@@ -22,11 +22,12 @@
 
   <div class="center-content">
     <h1 class="casadeAmigos">Casa de Amigos</h1>
+    <h2 class="zagolovok">Панель управління кімнатами</h2>
     
   </div>
 
   <div class="page-wrapper">
-     <img class="decoacrylic acrylic-1" src="./image/svg/acrylicleft.svg" alt="acrylic">
+    <img class="decoacrylic acrylic-1" src="./image/svg/acrylicleft.svg" alt="acrylic">
     <img class="decoacrylic acrylic-2" src="./image/svg/acrylicright.svg" alt="acrylic">
 
     <img class="deco deco-1 home" src="./image/svg/homeair.svg" alt="home">
@@ -34,7 +35,6 @@
     <img class="deco deco-3" src="./image/svg/palmbig.svg" alt="palm">
     <img class="deco deco-4" src="./image/svg/dog.svg" alt="dog">
     <img class="deco deco-5" src="./image/svg/swimmingpool.svg" alt="swimmingpool">
-
    
 </div>
 
