--- a/admin.html
+++ b/admin.html
@@ -22,7 +22,7 @@
 
   <div class="center-content">
     <h1 class="casadeAmigos">Casa de Amigos</h1>
-    <h2 class="zagolovok">Панель управління кімнатами</h2>
+    <h3 class="zagolovok1">Online Booking System</h3>
     
   </div>
 
